Fixed style, added GTM container

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "lp BEDDER",
+  "name": "Bedder - LP",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -344,7 +344,6 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
-      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
